...
          alignItems="center"
          justifyContent="space-between"
          position="relative"
        >
          <CloseButton
            onPress={() => handlePressWithHaptics(onExit)}
            testID="trivia-game-exit-button"
            label="Exit"
            style={{ zIndex: 1 }}
          />

          {/* Trivia Mode Title - Centered */}
          <View
...
